# nous

./: CLAUDE.md  LICENSE  README.md
life-nous/: Cargo.toml
life-nous/src/: lib.rs
nous-api/: Cargo.toml
nous-api/src/: lib.rs  routes.rs  store.rs
nous-core/: Cargo.toml
nous-core/src/: egri.rs  error.rs  evaluator.rs  events.rs  lib.rs  registry.rs  score.rs  taxonomy.rs
nous-heuristics/: Cargo.toml
nous-heuristics/fixtures/golden/: simple_chat.json  tool_use.json
nous-heuristics/src/: argument_validity.rs  budget_adherence.rs  knowledge.rs  lib.rs  safety_compliance.rs  step_efficiency.rs  token_efficiency.rs  tool_correctness.rs
nous-heuristics/tests/: golden_replay.rs
nous-judge/: Cargo.toml
nous-judge/src/: anthropic_judge.rs  judge_provider.rs  knowledge_utilization.rs  lib.rs  plan_adherence.rs  plan_quality.rs  reasoning_coherence.rs  task_completion.rs
nous-lago/: Cargo.toml
nous-lago/src/: lib.rs  publisher.rs  score_sink.rs  subscriber.rs
nous-middleware/: Cargo.toml
nous-middleware/src/: lib.rs  middleware.rs
nous-middleware/tests/: e2e_orchestrator.rs
nousd/: Cargo.toml
nousd/src/: main.rs
