[package]
name = "nous-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "HTTP API for Nous — eval endpoints, score queries"

[dependencies]
nous-core.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tower = "0.5"
http = "1"
http-body-util = "0.1"

[lints]
workspace = true
