[package]
name = "nous-middleware"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Arcan Middleware implementation for Nous — wires evaluators into the agent loop"

[dependencies]
nous-core.workspace = true
nous-heuristics.workspace = true
arcan-core.workspace = true
life-vigil.workspace = true
tracing.workspace = true
lago-knowledge.workspace = true
serde_json.workspace = true

[dev-dependencies]
nous-heuristics.workspace = true
lago-core.workspace = true
lago-store.workspace = true
tempfile = "3"

[lints]
workspace = true
